--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleconfirm.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title></title>
   </head>
 </html>
@@ -19,7 +19,7 @@
         </div>
 
         <header class="image_center">
-          <div class=".container.header_container image-center">
+          <div class=".container header_container image-center">
              
               <div class="header-1">
                   <div class="fact2">
